# meituan_hackathon

./: .env.local  .gitignore  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt  run.sh
md files/: architecture.md  current_technical_report.md  handbook.md  todo.md  v1_engineering_plan.md
meituan_map/: .env.example  README.md  design.md  index.html  package-lock.json  package.json  vite.config.ts
meituan_map/src/: App.tsx  vite-env.d.ts
meituan_map/src/components/: AccountEntryButton.css  AccountEntryButton.tsx  AccountSidebar.css  AccountSidebar.tsx  AgentPanel.tsx  BackendClarificationDialog.tsx  GenerationOverlay.tsx  HomeEntryButton.css  HomeEntryButton.tsx  IntentReviewDialog.tsx  LocationPreviewMap.tsx  PoiDetailPanel.tsx  PoiReplaceSheet.tsx  RouteEditorPanel.tsx  RoutePreferencesForm.tsx  ShareModal.tsx  ToastHost.tsx  icons.tsx
meituan_map/src/data/: constants.ts  mockPois.ts  mockRoutes.ts
meituan_map/src/hooks/: useGeolocation.ts
meituan_map/src/map/: GoogleMapsPreloader.tsx  MapContainer.tsx  loadGoogleMap.ts  pinHtml.ts  (+1 more)
meituan_map/tools/: bootstrap.py  test_mimo_chat.py
scripts/: __init__.py  build_city_subset.py  cache_local_comment_summaries.py  category_inventory.py  city_poi_density.py  load_comments.py  load_pois.py  parse_intent.py  summarize_comments.py
src/meituan_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/planner/: __init__.py  api.py  config.py  schemas.py  vocab.py
tests/: test_city_subset_builder.py  test_intent_clarifier_labels.py  test_planner_streaming.py  test_route_finder_progress.py
(+40 files in other folders)
