[project]
name = "meituan-planner"
version = "0.1.0"
description = "Data-centric route planning pipeline for the Meituan competition"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "pydeck>=0.9.0",
  "streamlit>=1.45.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
